refactor auth. (#47)
