# nucleus/models/users.py
@@ -5,7 +5,8 @@ from nucleus.models.base import Base
 
 
 class Users(Base):
-    username = db.Column(db.String, nullable=False, unique=True, comment="Username")
+    email = db.Column(db.String, nullable=False, unique=True, comment="E-mail")
+    mobile_phone = db.Column(db.String, unique=True, comment="Mobile phone")
     password_hash = db.Column(db.String, nullable=False, comment="Password")
     role_id = db.Column(db.String, db.ForeignKey("roles.id"), nullable=False)
     is_blocked = db.Column(db.Boolean, default=False, nullable=False, comment="Blocking sign")
@@ -23,7 +24,8 @@ class Users(Base):
     def to_dict(self) -> dict:
         user = {
             "id": self.id,
-            "username": self.username,
+            "email": self.email,
+            "mobile_phone": self.mobile_phone,
             "role": self.roles.name,
             "profile_id": self.profiles.id,
             "is_blocked": self.is_blocked,
@@ -32,7 +34,7 @@ class Users(Base):
 
 
 class Roles(Base):
-    name = db.Column(db.String, nullable=False, unique=True, comment="Username")
+    name = db.Column(db.String, nullable=False, unique=True, comment="Role name")
     users = db.relationship("Users", backref="roles")
 
     def to_dict(self) -> dict:
